--- a/package.json
+++ b/package.json
@@ -6,13 +6,21 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "server": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
+    "js-cookie": "^3.0.1",
+    "json-server": "^0.17.3",
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.3.1"
   }
 }
