--- a/package.json
+++ b/package.json
@@ -10,13 +10,22 @@
     "server": "json-server --watch db.json --port 8000"
   },
   "dependencies": {
+    "@iconify/react": "^4.1.0",
+    "chart.js": "^4.2.1",
+    "classnames": "^2.3.2",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "js-cookie": "^3.0.1",
     "json-server": "^0.17.3",
+    "mongoose": "^7.0.3",
     "next": "13.2.4",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-chartjs-2": "^5.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.9",
+    "react-icons": "^4.8.0",
+    "react-slick": "^0.29.0",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
