--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
     "react-slick": "^0.29.0",
+    "recharts": "^2.5.0",
     "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
